# STLC

./: LICENSE  MANIFEST.in  Makefile  README.md  language_spec.md  pyproject.toml
STCL/Parser/: Lexer.py
STLC/: Error.py  Range.py
STLC/CMD/: Main.py
STLC/Checker/: Checks.py
STLC/Parser/: AST.py  Grammar.lark  Lexer.py  Parser.py  Transformation.py
tests/: test_lexer.py  test_parser.py
